--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -4,11 +4,8 @@
       <nav id="site-nav" class="greedy-nav">
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
-          <li class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item">
-            <a href="https://tangjyan.github.io/" target="_self">
-              <img class="svg" src="/images/en.svg" width="20pt"> 
-              English
-            </a>
+          <li class="masthead__menu-item masthead__menu-item--lg">
+            <a href="{{ site.url }}" target="_self">首页</a>
           </li>
           {% for link in site.data.navigation.main %}
             <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
