--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -5,7 +5,7 @@
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
           <li class="masthead__menu-item masthead__menu-item--lg">
-            <a href="{{ site.baseurl }}/">首页</a>
+            <a href="{{ site.baseurl }}/en/">English</a>
           </li>
           {% for link in site.data.navigation.main %}
             {% assign first_char = link.url | slice: 0, 1 %}
